--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
-<html>
 
+<html>
+<!-- <section style="background: url('img/Tacos.jpg') fixed;" class="divider"></section> -->
 
     <head>
         <meta charset="utf-8">
@@ -40,8 +41,12 @@
         <link rel="stylesheet" href="/css/custom-fonticons.css">
     </head>
 
-    <body>
 
+
+
+
+    <body>
+      <img src="/img/Green copy.jpg" alt="">
         <header class="header">
           <!-- Top bar-->
           <div class="top-bar">
@@ -52,27 +57,99 @@
                     
                   </div>
                 </div>
-                <div class="CTAs"><a href="#" class="login"><i class="fa fa-sign-in"></i><span class="d-none d-md-inline">Login</span></a><a href="#" class="login"> <i class="fa fa-user"></i><span class="d-none d-md-inline">Register</span></a></div>
+                <div class="CTAs"><a href="/restaurants/signup" class="login"> <i class="fa fa-user"></i><span class="d-none d-md-inline">Signup</span></a><a href="/restaurants/login" class="login"><i class="fa fa-sign-in"></i><span class="d-none d-md-inline">Login</span></a></div>
               </div>
             </div>
           </div>
           <!-- Main Navbar-->
-          <nav class="navbar navbar-expand-lg">
+          <!-- nav class="navbar navbar-expand-lg">
             </div>
-          </nav>
+          </nav> -->
         </header>
 
         <div id="app"></div>
+
+        <section class="features bg-gray">
+          <div class="container text-center">
+            <div class="row">
+              <div class="col-sm-3">
+                <div class="icon"><i class="icon-checked"></i></div>
+                <h4 class="h5">Tacoholic's Mission</h4>
+                <li> <a href="/restaurants/mission">Click here</a></li>
+                <router-link :to="'/restaurants/mission"></router-link>
+              </div>
+              <div class="col-sm-3">
+                <div class="icon"><i class="icon-calendar"></i></div>
+                <h4 class="h5">Taco of the Week</h4>
+                <li> <a href="/restaurants/tow">Click here</a></li>
+                <router-link :to="/restaurants/tow"></router-link>
+              </div>
+              <div class="col-sm-3">
+                <div class="icon"><i class="icon-gallery"></i></div>
+                <h4 class="h5">Send us your pics!</h4>
+                <li> <a href="/restaurants/pictures">Click here</a></li>
+                <router-link :to="/restaurants/pictures"></router-link>
+              </div>
+              <div class="col-sm-3">
+                <div class="icon"><i class="icon-list"></i></div>
+                <h4 class="h5">Fun Facts</h4>
+                <li> <a href="/restaurants/funfacts">Click here</a></li>
+                <router-link :to="'/restaurants/funfacts"></router-link>
+              </div>
+            </div>
+          </div>
+        </section>
 
 
         <footer class="main-footer">
           <div class="container">
             <div class="row">
+              <div class="about col-md-4">
+                <div class="site-links col-md-4"></div>
+                <h3>Places</h3>
+                <p>
+                 Discover a new place that is not on our radar?  Let us know about it!  
+                </p>
+                <a href="/restaurants/new">Click Here</a> 
+              </div>
               <div class="site-links col-md-4">
+                <h3>Useful links</h3>
+                <div class="menus d-flex">
+                  <ul class="list-unstyled">
+                    <div>
+                    <li> <a href="/restaurants">Homepage</a></li>
+                    <router-link :to="'/restaurants"></router-link>
+                    </div>
+                    <li> <a href="https://www.grubhub.com">Grubhub</a></li>
+                    <li> <a href="https://www.doordash.com">Doordash</a></li>
+                    <li> <a href="https://www.ubereats.com">Uber Eats</a></li>
+                    <!-- <li> <a href="blog.html">Blog</a></li>
+                    <li> <a href="post.html">Post</a></li>
+                    <li> <a href="#">Privacy policy </a><span class="badge badge-secondary text-uppercase ml-1">Soon</span></li> -->
+                  </ul>
+                  <!-- <ul class="list-unstyled">
+                    <li> <a href="text.html">Text page</a></li>
+                    <li> <a href="404.html">404 - Not found</a></li>
+                    <li> <a href="contact.html">Contact</a></li>
+                    <li> <a href="#">Pricing </a><span class="badge badge-secondary text-uppercase ml-1">Soon</span></li>
+                  </ul> -->
+                </div>
+              </div>
+              <div class="contact col-md-4">
+                <h3>Contact  us</h3>
+                <div class="info">
+                  <p> 215 W Ohio St Suite 300, Chicago, IL 60654</p>
+                  <p>Phone: (773) 844-9349</p>
+                  <p>Email: <a href="mailto:info@company.com">Info@tacoholics.com</a></p>
+                </div>
               </div>
             </div>
           </div>
+          <div class="copyrights text-center">
+            <p>&copy; 2017 - 2019 <span class="text-primary">Christian Solis </span> All Rights Reserved.</p>
+          </div>
         </footer>
+
 
 
     <script src="/js/jquery.min.js"></script>
@@ -93,7 +170,6 @@
     <script src="/js/syntax-highlighter/scripts/shBrushJScript.js"></script>
 
     </body>
-
 </html>
 
 
