updated show page by creating hyperlinks, adding shawdowbox and images to index page

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Places | Directory Template </title>
+        <title>Tacoholic</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="all,follow">
@@ -57,7 +57,7 @@
                     
                   </div>
                 </div>
-                <div class="CTAs"><a href="/restaurants/signup" class="login"> <i class="fa fa-user"></i><span class="d-none d-md-inline">Signup</span></a><a href="/restaurants/login" class="login"><i class="fa fa-sign-in"></i><span class="d-none d-md-inline">Login</span></a></div>
+                <div class="CTAs"><a href="/restaurants/signup" class="login"> <i class="fa fa-user"></i><span class="d-none d-md-inline">Signup</span></a><a href="/restaurants/login" class="login"><i class="fa fa-sign-in"></i><span class="d-none d-md-inline">Login</span></a><a href="/restaurants/logout" class="logout"><i class="fa fa-sign-in"></i><span class="d-none d-md-inline">Logout</span></a></div>
               </div>
             </div>
           </div>
