changed fonts, added background

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 
 
 <html>
+<link href="https://fonts.googleapis.com/css?family=Crete+Round|Righteous" rel="stylesheet">
 <!-- <section style="background: url('img/Tacos.jpg') fixed;" class="divider"></section> -->
 
     <head>
@@ -74,25 +75,25 @@
             <div class="row">
               <div class="col-sm-3">
                 <div class="icon"><i class="icon-checked"></i></div>
-                <h4 class="h5">Tacoholic's Mission</h4>
+                <h4>Tacoholic's Mission</h4>
                 <li> <a href="/restaurants/mission">Click here</a></li>
                 <router-link :to="'/restaurants/mission"></router-link>
               </div>
               <div class="col-sm-3">
                 <div class="icon"><i class="icon-calendar"></i></div>
-                <h4 class="h5">Taco of the Week</h4>
+                <h4>Taco of the Week</h4>
                 <li> <a href="/restaurants/tow">Click here</a></li>
                 <router-link :to="/restaurants/tow"></router-link>
               </div>
               <div class="col-sm-3">
                 <div class="icon"><i class="icon-gallery"></i></div>
-                <h4 class="h5">Send us your pics!</h4>
+                <h4>Send us your pics!</h4>
                 <li> <a href="/restaurants/pictures">Click here</a></li>
                 <router-link :to="/restaurants/pictures"></router-link>
               </div>
               <div class="col-sm-3">
                 <div class="icon"><i class="icon-list"></i></div>
-                <h4 class="h5">Fun Facts</h4>
+                <h4>Fun Facts</h4>
                 <li> <a href="/restaurants/funfacts">Click here</a></li>
                 <router-link :to="'/restaurants/funfacts"></router-link>
               </div>
