--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
                     
                   </div>
                 </div>
-                <div class="CTAs"><a href="/restaurants/signup" class="login"> <i class="fa fa-user"></i><span class="d-none d-md-inline">Signup</span></a><a href="/restaurants/login" class="login"><i class="fa fa-sign-in"></i><span class="d-none d-md-inline">Login</span></a><a href="/restaurants/logout" class="logout"><i class="fa fa-sign-in"></i><span class="d-none d-md-inline">Logout</span></a></div>
+                <div class="CTAs"><a href="/restaurants" class="logout"><i class="fa fa-sign-in"></i><span class="d-none d-md-inline">Homepage</span></a><a href="/restaurants/signup" class="login"> <i class="fa fa-user"></i><span class="d-none d-md-inline">Signup</span></a><a href="/restaurants/login" class="login"><i class="fa fa-sign-in"></i><span class="d-none d-md-inline">Login</span></a><a href="/restaurants/logout" class="logout"><i class="fa fa-sign-in"></i><span class="d-none d-md-inline">Logout</span></a></div>
               </div>
             </div>
           </div>
